[package]
name = "tokio-diesel"
version = "0.3.0"
authors = ["Ryan Leckey <leckey.ryan@gmail.com>"]
edition = "2018"
description = "Integrate Diesel into Tokio cleanly and efficiently."
repository = "https://github.com/mehcode/tokio-diesel"
license = "MIT/Apache-2.0"
categories = ["asynchronous", "database"]

[dependencies]
async-trait-with-sync = { git = "https://github.com/49nord/async-trait.git", rev = "3a4d80f667b78a62f0c57f2524100dafd6b01c31" }
diesel = { version = "1.4.5", default-features = false, features = [ "r2d2" ] }
futures = { version = "0.3.5", default-features = false }
r2d2 = "0.8.8"
tokio = { version = ">=0.2.21", default-features = false, features = [ "blocking", "rt-threaded" ] }

[dev-dependencies]
diesel = { version = "1.4.4", default-features = false, features = [ "postgres", "uuidv07" ] }
uuid = { version = "0.8.1", features = [ "v4" ] }
tokio = { version = ">=0.2.21", default-features = false, features = [ "full" ] }
